--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@ stylesheet">
 
 <body>
     <header>
-        <a href="#" class="logo">RushForSkins</a>
+        <a href="#" class="logo">LaRuste</a>
         <nav>
             <ul class="navlist">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">O nas</a></li>
                 <li><a href="#win">Wygrywaj</a></li>
                 <li><a href="#contact">Kontakt</a></li>
-                <li><a href="#" id="login-btn">Zaloguj</a></li>
+                <li><a href="/static-exaples/login" id="login-btn">Zaloguj</a></li>
             </ul>
         </nav>
         <div class="bx bx-menu" id="menu-icon"></div>
@@ -32,11 +32,11 @@ stylesheet">
     <section class="hello-sec" id="home">
         <div class="hello-txt">
             <h5>Najlepsza strona w Polsce</h5>
-            <h4>Wygrywaj skiny RUSTA</h4>
-            <h1>SKINY</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim molestiae eaque iusto dolores, voluptates esse.</p>
-            <a href="#">Porównaj</a>
-            <a href="#" class="ctaa"><i class="ri-coin-line"></i> Oglądaj i wygrywaj</a>
+            <h4>Pobierz naszą aplikację</h4>
+            <h1>LaRuste</h1>
+            <p>Wygrywaj skiny juz dziś na naszej nowej aplikacji mobilnej w kazdym miejscu i o kazdej porze!</p>
+            <a href="#"><i class="ri-google-play-line"></i> Sklep GooglePlay</a>
+            <a href="#" class="ctaa"><i class="ri-app-store-line"></i> AppStore</a>
         </div>
         <div class="hello-img">
             <img class="main-img" src="Assets/main.png" alt="">
@@ -55,7 +55,7 @@ stylesheet">
         <div class="contact-main con-row">
             <div class="contact-txt"><pre>
 <span style="font-weight: 100;">Kacper Kulpok</span>
-<b>RushForSkins sp. z o.o.</b>
+<b>LaRusta sp. z o.o.</b>
 
 <i class="ri-phone-line"></i>  +48 736 666 545
 <i class="ri-mail-send-line"></i>   biuro@rushforskins.com
@@ -69,15 +69,29 @@ woj. opolskie</span></pre></div>
     <footer>
         <div class="main">
             <div class="links">
+                <h3 style="color: black;">Links</h3>
                 <ul>
-                    <li>Przykladowy</li>
-                    <li>Jakis</li>
-                    <li>Link</li>
-                    <li>Taki</li>
-                    <li>Wstawiony</li>
+                    <li>Terms of Service</li>
+                    <li>Privacy Policy</li>
+                    <li>FAQ</li>
+                    <li>Provably Fair</li>
+                    <li>Support</li>
+                    <li>Affiliates</li>
+                    <li>Shop</li>
                 </ul>
             </div>
-            <div class="fit">x</div>
+            <div class="fit">
+                <h3 class="social-header">Nasze Sociale</h3>
+                <ul>
+                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-facebook-box-line"></i> Facebook</a></li>
+                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-youtube-line"></i> YouTube</a></li>
+                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-instagram-line"></i> Instagram</a></li>
+                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-twitter-line"></i> Twitter</a></li>
+                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-twitch-fill"></i> Twitch</a></li>
+                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-steam-line"></i> Steam</a></li>
+                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-tiktok-fill"></i> TikTok</a></li>
+                </ul>
+            </div>
         </div>
         <div class="low"><p class="copyright">Made by Kamil Gola<br /> Copyright(c) 2023</p></div>
     </footer>
