--- a/index.html
+++ b/index.html
@@ -1,101 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pl">
 <head>
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&
-family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="
-stylesheet">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Signika">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <title>Prawda, czy wyzwanie!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
+    <meta author="Kamil Gola">
+    <meta description="Zagraj już dziś ze znajomymi w Prawda czy Wyzwanie. Losuj z puli setek pytań oraz wyzwań. Wybierz jeden z pięciu trybów, który najbardziej przypasuje znajomym do gry!">
+    <script src="script.js"></script>
+    <link rel="icon" type="image/svg+xml" href="../assets/images/favicon.svg">
+    <link rel="icon" type="image/png" href="../assets/images/favicon.png">
 </head>
-
 <body>
-    <header>
-        <a href="#" class="logo">LaRuste</a>
-        <nav>
-            <ul class="navlist">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">O nas</a></li>
-                <li><a href="#win">Wygrywaj</a></li>
-                <li><a href="#contact">Kontakt</a></li>
-                <li><a href="/static-exaples/login" id="login-btn">Zaloguj</a></li>
-            </ul>
-        </nav>
-        <div class="bx bx-menu" id="menu-icon"></div>
-    </header>
-    <section class="hello-sec" id="home">
-        <div class="hello-txt">
-            <h5>Najlepsza strona w Polsce</h5>
-            <h4>Pobierz naszą aplikację</h4>
-            <h1>LaRuste</h1>
-            <p>Wygrywaj skiny juz dziś na naszej nowej aplikacji mobilnej w kazdym miejscu i o kazdej porze!</p>
-            <a href="#"><i class="ri-google-play-line"></i> Sklep GooglePlay</a>
-            <a href="#" class="ctaa"><i class="ri-app-store-line"></i> AppStore</a>
-        </div>
-        <div class="hello-img">
-            <img class="main-img" src="Assets/main.png" alt="">
-        </div>
-    </section>
-    <section class="about-sec" id="about">
-
-    </section>
-    <section class="win-sec" id="win">
-
-    </section>
-    <section class="contact-sec" id="contact">
-        <div class="contact-header con-row">
-            <h1>Kontakt</h1>
-        </div>
-        <div class="contact-main con-row">
-            <div class="contact-txt"><pre>
-<span style="font-weight: 100;">Kacper Kulpok</span>
-<b>LaRusta sp. z o.o.</b>
-
-<i class="ri-phone-line"></i>  +48 736 666 545
-<i class="ri-mail-send-line"></i>   biuro@rushforskins.com
-
-<span style="font-weight: 400;">ul Leśna 99a
-47-330 Krępna
-woj. opolskie</span></pre></div>
-            <div class="contact-map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10163.63350975507!2d18.07192935!3d50.44280725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471106068d2122e1%3A0xbbe00b07e60db443!2s47-330%20Kr%C4%99pna!5e0!3m2!1sen!2spl!4v1695305392589!5m2!1sen!2spl" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="iframe-map"></iframe></div>
-        </div>
-    </section>
-    <footer>
-        <div class="main">
-            <div class="links">
-                <h3 style="color: black;">Links</h3>
-                <ul>
-                    <li>Terms of Service</li>
-                    <li>Privacy Policy</li>
-                    <li>FAQ</li>
-                    <li>Provably Fair</li>
-                    <li>Support</li>
-                    <li>Affiliates</li>
-                    <li>Shop</li>
-                </ul>
+    <center>
+        <div class="pytaniediv"><h2 id="pytanie">Wybierz!</h2><i class="fa fa-share-alt" id="share" onclick="shareQuestion()"></i></div>
+        <div class="mainbcontainer">
+            <div class="mainb" id="prawda" onclick="dziala()">
+                <uoa>Prawda</uoa>
             </div>
-            <div class="fit">
-                <h3 class="social-header">Nasze Sociale</h3>
-                <ul>
-                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-facebook-box-line"></i> Facebook</a></li>
-                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-youtube-line"></i> YouTube</a></li>
-                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-instagram-line"></i> Instagram</a></li>
-                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-twitter-line"></i> Twitter</a></li>
-                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-twitch-fill"></i> Twitch</a></li>
-                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-steam-line"></i> Steam</a></li>
-                    <li class="social"><a href="#" target="_blank" rel="noopener noreferrer"><i class="ri-tiktok-fill"></i> TikTok</a></li>
-                </ul>
+            <h2>Czy</h2>
+            <div class="mainb" id="wyzwanie" onclick="dziala()">
+                <uoa>Prawda</uoa>
             </div>
-        </div>
-        <div class="low"><p class="copyright">Made by Kamil Gola<br /> Copyright(c) 2023</p></div>
-    </footer>
-    <script src="index.js"></script>
+    </center>
+    <!-- <footer class="footer">MLBLUAUAUA, moc.liamg@71limak.ycarog</footer> -->
 </body>
-
 </html>
