--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 </head>
 <body>
     <center>
-        <div class="pytaniediv"><h2 id="pytanie">Wybierz!</h2><i class="fa fa-share-alt" id="share" onclick="shareQuestion()"></i></div>
+        <div class="pytaniediv"><h2 id="pytanie">Wybierz! &#128520;</h2><i class="fa fa-share-alt" id="share" onclick="shareQuestion()"></i></div>
         <div class="mainbcontainer">
             <div class="mainb" id="prawda" onclick="dziala()">
                 <uoa>Prawda</uoa>
             </div>
             <h2>Czy</h2>
-            <div class="mainb" id="wyzwanie" onclick="dziala()">
-                <uoa>Prawda</uoa>
+            <div class="mainb" id="wyzwanie" onclick="dzialaw()">
+                <uoa>Wyzwanie</uoa>
             </div>
     </center>
     <!-- <footer class="footer">MLBLUAUAUA, moc.liamg@71limak.ycarog</footer> -->
