--- a/linki.html
+++ b/linki.html
@@ -166,58 +166,30 @@
                 </td>
 
                 <td class="content">
-                    <center><h2>.: WITAJ W MOIM ŚWIECIE :.</h2></center>
+                    <center><h2>.: TU LINKI DO DYSKOW ITP :.</h2></center>
                     <p align="justify">
-                        Siema wszystkim! To jest nowa odsłona Flutowni. Stara wersja została usunięta, więc przeniosłem się tutaj. Strona jest ciągle <b>UNDER CONSTRUCTION</b> <span style="color:yellow;">🚧</span>, więc proszę o wyrozumiałość.
-                    </p>
-                    <p>
-                        Strona najlepiej wygląda w rozdzielczości <b>800x600</b> i przeglądarce Internet Explorer 6.0.
+                        Tu beda pojawialy sie linki do roznych dyskow z kolosami, testami, quizami, karkowkami i zaliczeniami.
                     </p>
 
                     <hr>
 
-                    <h3>.: POLECANE LINKI :.</h3>
-                    <p>Oto zbiór moich ulubionych stron w internecie. Klikajcie i oglądajcie!</p>
+                    <h3>.: LINKI DO MATERIAŁÓW :.</h3>
+                    <p>Naucz się juz teraz. Klikajcie i uczcie się!</p>
 
                     <table width="100%" border="0">
                         <tr>
                             <td width="50%">
                                 <ul>
-                                    <li><a href="https://www.google.com" target="_blank">Wyszukiwarka Google</a></li>
-                                    <li><a href="https://www.youtube.com/watch?v=SIMQJ-bfClg">Zaczarowany Dorozkarz</a></li>
-                                    <!-- <li><a href="#" onClick="alert('Jeszcze nie działa'); return false;">Moja playlista Winamp</a></li>
-                                    <li><a href="#" onClick="alert('Gadu-Gadu: 1234567'); return false;">Moje Gadu-Gadu</a></li> -->
+                                    <li>2025 - zima testy
+                                        <ol>
+                                            <li><a href="https://drive.google.com/drive/folders/10jah1vq6JYdMxtkudULsgRSUpnqBLLv5?fbclid=IwY2xjawPTQ8ZleHRuA2FlbQIxMQBzcnRjBmFwcF9pZAEwAAEeyRmoN8flZLdXqJblclBL42W1CsKyLLql2066EoMjx9TDDYbhsDFU9UuSrFE_aem_phmPTnZ8sS6p3tYzjM30ig" target="_blank">Dysk GOOGLE</a></li>
+                                        </ol>
+                                    </li>
                                 </ul>
                             </td>
-                            <!-- <td width="50%">
-                                <ul>
-                                    <li><a href="#">Bramka SMS (Za darmo!)</a></li>
-                                    <li><a href="#">Śmieszne Filmiki (Maxior)</a></li>
-                                    <li><a href="#">Tapety na pulpit</a></li>
-                                    <li><a href="#">Forum Dyskusyjne</a></li>
-                                </ul>
-                            </td> -->
                         </tr>
                     </table>
-
                     <hr>
-
-                    <div class="news-box">
-                        <span class="date">20.05.2003 | dodał: WebMaster</span><br>
-                        <b>WIELKA AKTUALIZACJA!</b><br>
-                        Dodałem nowy dział z linkami do testów. Poza tym zmieniłem tło na ciemniejsze, żeby nie raziło w oczy w nocy. Pozdro dla wszystkich odwiedzających!
-                        <br><br>
-                        <i>Komentarze (4)</i>
-                    </div>
-
-                    <div class="news-box">
-                        <span class="date">12.04.2003 | dodał: WebMaster</span><br>
-                        <b>Startujemy...</b><br>
-                        Wreszcie ruszyła Flutownia.net. Zapraszam do wpisywania się do Księgi Gości. Jeśli masz fajne linki, wyślij mi maila.
-                        <br><br>
-                        <i>Komentarze (0)</i>
-                    </div>
-
                 </td>
             </tr>
         </table>
