--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
                                 <ul>
                                     <li><a href="https://www.google.com" target="_blank">Wyszukiwarka Google</a></li>
                                     <li><a href="https://www.youtube.com/watch?v=SIMQJ-bfClg">Zaczarowany Dorozkarz</a></li>
-                                    <!-- <li><a href="#" onClick="alert('Jeszcze nie działa'); return false;">Moja playlista Winamp</a></li>
-                                    <li><a href="#" onClick="alert('Gadu-Gadu: 1234567'); return false;">Moje Gadu-Gadu</a></li> -->
+                                    <li><a href="https://scontent-vie1-1.xx.fbcdn.net/v/t1.15752-9/614860421_2354950478263676_4568450974720518047_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=9f807c&_nc_ohc=57BXnmQKa7cQ7kNvwH8gYbM&_nc_oc=AdlnOme0xyJgegzlI5cYa-_HyF3V5PqxMUnfsml9rrn18jAnXeWdydSOfqGgAERN0vI&_nc_zt=23&_nc_ht=scontent-vie1-1.xx&oh=03_Q7cD4QEpE6sZRicOfeADJyiCaYiuTjYKX2e-n5GDafB9KxHCVg&oe=6996E11B">GOAT</a></li>
+                                    <!-- <li><a href="#" onClick="alert('Gadu-Gadu: 1234567'); return false;">Moje Gadu-Gadu</a></li> -->
                                 </ul>
                             </td>
                             <!-- <td width="50%">
