--- a/testy.html
+++ b/testy.html
@@ -142,19 +142,20 @@
                     <br>
                     <div class="menu-header">:: NAWIGACJA ::</div>
                     <a href="index.html" class="button-link">Strona Główna</a>
-                    <a href="linki.html" class="button-link">Linki do testów</a>
-                    <!-- <a href="#" onClick="alert('Jeszcze nie działa'); return false;" class="button-link">Galeria (New!)</a> -->
+                    <a href="linki.html" class="button-link">Linki</a>
+                    <a href="download.html" class="button-link">Pliki</a>
                     <a href="testy.html" class="button-link">Testuj się</a>
                     <!-- <a href="#" onClick="alert('Jeszcze nie działa'); return false;" class="button-link">Księga Gości</a>
                     <a href="#" onClick="alert('Jeszcze nie działa'); return false;" class="button-link">Kontakt</a> -->
                     <br>
                     <div class="menu-header">:: SHOUTBOX ::</div>
                     <div style="background:white; color:black; height:100px; font-size:10px; overflow-y:scroll; text-align:left; padding:2px; border:1px inset;">
-                        <b>Seba:</b> Elo!<br>
-                        <b>Marta19:</b> Fajna stronka :*<br>
-                        <b>Admin:</b> Nie spamować!<br>
-                        <b>Ziomal:</b> Kiedy nowe fotki?
-                        <br><b style="color: red;">CHAT JESZCZE NIE DZIALA!!</b>
+                        <b>Ogórek1:</b> Elo!<br>
+                        <b>Golas:</b> No hej<br>
+                        <b>Friz:</b> Jak tam maciek!<br>
+                        <b>Ogórek2:</b> a dobrze stary <br>
+                        <b>Ból:</b> chuj wam w dupe<br>
+                        <br><b style="color: red;">MUSISZ BYĆ ZALOGOWANY ABY PISAĆ NA CHACIE!   </b>
                     </div>
                     <br>
                     <div class="menu-header">:: LICZNIK GOŚCI ::</div>
