--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>~*~ Flutownia.net - Najlepszy Portal ~*~</title>
+    <title>Fluto.net - Najlepszy Portal</title>
     <style>
         /* Symulacja stylów z 2000 roku */
         body {
@@ -24,7 +24,7 @@
         a:visited { color: #FF00FF; } /* Magenta */
         a:hover { 
             color: #FFFF00; 
-            cursor: crosshair; 
+            /* cursor: crosshair;  */
             background-color: #000000;
             text-decoration: underline;
         }
@@ -126,7 +126,7 @@
     <div class="main-container">
         
         <div class="header">
-            <h1>~*~ FLUTOWNIA.NET ~*~</h1>
+            <h1>~*~ FLUTO.NET ~*~</h1>
             <font size="2">Twoje centrum kolosów, testów i zaliczeń w sieci!</font>
         </div>
 
@@ -142,25 +142,27 @@
                     <br>
                     <div class="menu-header">:: NAWIGACJA ::</div>
                     <a href="index.html" class="button-link">Strona Główna</a>
-                    <a href="linki.html" class="button-link">Linki do testów</a>
-                    <!-- <a href="#" onClick="alert('Jeszcze nie działa'); return false;" class="button-link">Galeria (New!)</a> -->
+                    <a href="linki.html" class="button-link">Linki</a>
+                    <a href="download.html" class="button-link">Pliki</a>
                     <a href="testy.html" class="button-link">Testuj się</a>
                     <!-- <a href="#" onClick="alert('Jeszcze nie działa'); return false;" class="button-link">Księga Gości</a> -->
                     <!-- <a href="#" onClick="alert('Jeszcze nie działa'); return false;" class="button-link">Kontakt</a> -->
                     <br>
                     <div class="menu-header">:: SHOUTBOX ::</div>
                     <div style="background:white; color:black; height:100px; font-size:10px; overflow-y:scroll; text-align:left; padding:2px; border:1px inset;">
-                        <b>Seba:</b> Elo!<br>
-                        <b>Marta19:</b> Fajna stronka :*<br>
-                        <b>Admin:</b> Nie spamować!<br>
-                        <b>Ziomal:</b> Kiedy nowe fotki?
-                        <br><b style="color: red;">CHAT JESZCZE NIE DZIALA!!</b>
+                        <b>Ogórek1:</b> Elo!<br>
+                        <b>Golas:</b> No hej<br>
+                        <b>Friz:</b> Jak tam maciek!<br>
+                        <b>Ogórek2:</b> a dobrze stary <br>
+                        <b>Ból:</b> chuj wam w dupe<br>
+                        <br><b style="color: red;">MUSISZ BYĆ ZALOGOWANY ABY PISAĆ NA CHACIE!   </b>
                     </div>
                     <br>
                     <div class="menu-header">:: LICZNIK GOŚCI ::</div>
                     <font color="red" face="Courier"><b>[ 014832 ]</b></font>
                     <br><br>
-                    <img src="https://www.rw-designer.com/icon-image/20087-256x256x4.png" alt="IE Compatible" width="100px">
+                    <div class="menu-header">:: REKLAMY ::</div>
+                    <a href="https://www.facebook.com/piotr.rozniatowski.14"><img src="https://i1.sndcdn.com/artworks-kBwtlYzivdLyS4KK-ll6r3Q-t500x500.jpg" alt="IE Compatible" width="180px" style="margin-bottom: 20px;"></a>
                     <br>
                     <img src="https://media1.tenor.com/m/gUZjyglwm8wAAAAC/chomik-chomikuj.gif" width="120px" alt="Made in Notepad">
                 </td>
