--- a/testy.html
+++ b/testy.html
@@ -186,6 +186,11 @@
                                             <li><a href="testy/analiza1-test/index.html" target="_blank">Analiza matematyczna 1 - test/quiz wykład</a></li>
                                         </ol>
                                     </li>
+                                    <li>OSK - PIEKIELNIAK
+                                        <ol>
+                                            <li><a href="testy/osk1-test/index.html">Test architektura na egzamin</a></li>
+                                        </ol>
+                                    </li>
                                 </ul>
                             </td>
                         </tr>
