Update shoutbox messages in index.html

--- a/index.html
+++ b/index.html
@@ -152,9 +152,10 @@
                     <div style="background:white; color:black; height:100px; font-size:10px; overflow-y:scroll; text-align:left; padding:2px; border:1px inset;">
                         <b>Ogórek1:</b> Elo!<br>
                         <b>Golas:</b> No hej<br>
-                        <b>Friz:</b> Jak tam maciek!<br>
+                        <b>Friz:</b> Siema macias!<br>
                         <b>Ogórek2:</b> a dobrze stary <br>
-                        <b>Ból:</b> chuj wam w dupe<br>
+                        <b>Ból:</b> Jebzc znie<br>
+                        <b>JakKuro85:</b> JEBAC ZYDOW KURWA<br>
                         <br><b style="color: red;">MUSISZ BYĆ ZALOGOWANY ABY PISAĆ NA CHACIE!   </b>
                     </div>
                     <br>
