Wrap image in a link for external video

--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
                     <div class="menu-header">:: REKLAMY ::</div>
                     <a href="https://www.facebook.com/piotr.rozniatowski.14"><img src="https://i1.sndcdn.com/artworks-kBwtlYzivdLyS4KK-ll6r3Q-t500x500.jpg" alt="IE Compatible" width="180px" style="margin-bottom: 20px;"></a>
                     <br>
-                    <img src="https://media1.tenor.com/m/gUZjyglwm8wAAAAC/chomik-chomikuj.gif" width="120px" alt="Made in Notepad">
+                    <a href="https://pl.xhamster.com/videos/cyprian-knapinski-i-am-fighting-myself-rocky-niebieskooki-13140827" target="_blank">
+                        <img src="https://media1.tenor.com/m/gUZjyglwm8wAAAAC/chomik-chomikuj.gif" width="120" alt="Made in Notepad" border="0">
+                    </a>
                 </td>
 
                 <td class="content">
