--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <font color="red" face="Courier"><b>[ 014832 ]</b></font>
                     <br><br>
                     <div class="menu-header">:: REKLAMY ::</div>
-                    <a href="https://www.facebook.com/piotr.rozniatowski.14"><img src="https://i1.sndcdn.com/artworks-kBwtlYzivdLyS4KK-ll6r3Q-t500x500.jpg" alt="IE Compatible" width="180px" style="margin-bottom: 20px;"></a>
+                    <a href="https://www.facebook.com/maciej.gorki"><img src="https://i1.sndcdn.com/artworks-kBwtlYzivdLyS4KK-ll6r3Q-t500x500.jpg" alt="IE Compatible" width="180px" style="margin-bottom: 20px;"></a>
                     <br>
                     <a href="https://pl.xhamster.com/videos/cyprian-knapinski-i-am-fighting-myself-rocky-niebieskooki-13140827" target="_blank">
                         <img src="https://media1.tenor.com/m/gUZjyglwm8wAAAAC/chomik-chomikuj.gif" width="120" alt="Made in Notepad" border="0">
