--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <a href="index.html" class="button-link">Strona Główna</a>
                     <a href="linki.html" class="button-link">Linki</a>
                     <a href="download.html" class="button-link">Pliki</a>
-                    <a href="testy.html" class="button-link">Testuj się</a>
+                    <a href="ptoszek.pl" class="button-link">Testuj się</a>
                     <!-- <a href="#" onClick="alert('Jeszcze nie działa'); return false;" class="button-link">Księga Gości</a> -->
                     <!-- <a href="#" onClick="alert('Jeszcze nie działa'); return false;" class="button-link">Kontakt</a> -->
                     <br>
@@ -232,6 +232,7 @@
             Design by <b>Nie interesuj sie</b><br>
             Wszelkie prawa zastrzeżone.<br>
             <a href="mailto:w_chuja_cie_robie@flutownia.net">Napisz do mnie</a>
+            <a href="testy.html" class="button-link">Regulamin</a>
         </div>
 
     </div>
