--- a/linki.html
+++ b/linki.html
@@ -144,7 +144,7 @@
                     <a href="index.html" class="button-link">Strona Główna</a>
                     <a href="linki.html" class="button-link">Linki</a>
                     <a href="download.html" class="button-link">Pliki</a>
-                    <a href="testy.html" class="button-link">Testuj się</a>
+                    <a href="https://www.ptoszek.pl" class="button-link">Testuj się</a>
                     <!-- <a href="#" onClick="alert('Jeszcze nie działa'); return false;" class="button-link">Księga Gości</a> -->
                     <!-- <a href="#" onClick="alert('Jeszcze nie działa'); return false;" class="button-link">Kontakt</a> -->
                     <br>
