--- a/testy.html
+++ b/testy.html
@@ -196,6 +196,10 @@
                                             <li><a href="testy/prawo-gospodarcze1/index.html">Test prawo gospodarcze</a></li>
                                         </ol>
                                     </li>
+                                    <li>ALGORYTMY SESJA</li>
+                                        <ol>
+                                            <li><a href="testy/algorytmy-sesja/index.html"></li>
+                                        </ol>
                                 </ul>
                             </td>
                         </tr>
