--- a/testy.html
+++ b/testy.html
@@ -198,7 +198,7 @@
                                     </li>
                                     <li>ALGORYTMY SESJA</li>
                                         <ol>
-                                            <li><a href="testy/algorytmy-sesja/index.html"></li>
+                                            <li><a href="testy/algorytmy-sesja/index.html">Test z zamkniętych pytań z sesji</a></li>
                                         </ol>
                                 </ul>
                             </td>
