--- a/testy.html
+++ b/testy.html
@@ -196,10 +196,11 @@
                                             <li><a href="testy/prawo-gospodarcze1/index.html">Test prawo gospodarcze</a></li>
                                         </ol>
                                     </li>
-                                    <li>ALGORYTMY SESJA</li>
+                                    <li>ALGORYTMY SESJA
                                         <ol>
                                             <li><a href="testy/algorytmy-sesja/index.html">Test z zamkniętych pytań z sesji</a></li>
                                         </ol>
+                                    </li>
                                 </ul>
                             </td>
                         </tr>
