--- a/testy.html
+++ b/testy.html
@@ -191,7 +191,7 @@
                                             <li><a href="testy/osk1-test/index.html">Test architektura na egzamin</a></li>
                                         </ol>
                                     </li>
-                                    <li>OSK - PIEKIELNIAK
+                                    <li>PRAWO AUTORSKIE
                                         <ol>
                                             <li><a href="testy/prawo-gospodarcze1/index.html">Test prawo gospodarcze</a></li>
                                         </ol>
